--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "scripts": {
     "test": "mocha"
   },
-  "dependencies": {},
+  "dependencies": {
+    "inquirer2": "github:jonschlinkert/inquirer2"
+  },
   "devDependencies": {
     "mocha": "*",
     "should": "*"
