adding related list

--- a/package.json
+++ b/package.json
@@ -26,5 +26,12 @@
     "mocha": "*",
     "should": "*"
   },
-  "keywords": []
+  "keywords": [],
+  "verb": {
+    "related": {
+      "list": [
+        "inquirer2"
+      ]
+    }
+  }
 }
