add ansi-colors dep for examples

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "inquirer2": "github:jonschlinkert/inquirer2"
   },
   "devDependencies": {
+    "ansi-colors": "^0.1.0",
     "mocha": "*",
     "should": "*"
   },
